--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+/* stylelint-disable at-rule-no-unknown */
+/* Allow Tailwind's @tailwind at-rules which some linters don't recognise */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* stylelint-enable at-rule-no-unknown */
 
 /* Force dark background and light text globally */
 body {
